see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

19-Oct-2011 Jean-Marie Simonet
 # [#26977] *Multilanguage: adding custom Site Name per Content Language
 + Adding Austria and Switzerland flags for mod_languages
 # Modifying version.php to 1.7.2
 
16-Oct-2011 Christophe Demko
 # [#26897] JDatabasequery work in com_plugins

17-Oct-2011 Jean-Marie Simonet
 # [#26972] Small regression rev. 22054, skipping translation in <description>, + BC 1.6.x issue. Thanks Cir Tap
 # [#26885] JText do not recognize "" no-string. Thanks Christophe.
 # [#26491] Date Icon "string untranslated". Thanks Christophe
 # [#24973] JHTML select.options with html entities. Thanks Pavel and Bill.
 
16-Oct-2011 Christophe Demko
 # [#26904] JDatabasequery work in com_redirect and com_search (Elin Waring)
 # [#26898] JDatabasequery work in com_newsfeeds (Elin Waring)
 # [#26896] JDatabasequery work in com_users front end (Elin Waring)

15-Oct-2011 Christophe Demko
 # [#26929] *Unique alias & Unicode alias issue
 # [#26937] Bluestork tabs fix when more than one row of tabs (Andrea Tarr, Matt Thomas)
 # [#26910] view metadata.xml isn't considered for parameters

13-Oct-2011 Jean-Marie Simonet
Pushed to github the following missing SVN commits when joomla-cms was moved
 # [#26911] Merge some code style changes from platform 11.3 (Rouven Weßling)
 # [#26912] Merge some code style changes from platform 11.3 (Rouven Weßling)
 # [#24664] Back-end language switching is working only when Default is selected
 # [#26907] *Adding tip to batch function (Jean-Marie Simonet)
 # [#26427] header items in the administrator panel are not in the right order on RTL template
 