@@ -29,6 +29,8 @@ MOD_MENU_EXTENSIONS_LANGUAGE_MANAGER="Language Manager"
 MOD_MENU_EXTENSIONS_MODULE_MANAGER="Module Manager"
 MOD_MENU_EXTENSIONS_PLUGIN_MANAGER="Plug-in Manager"
 MOD_MENU_EXTENSIONS_TEMPLATE_MANAGER="Template Manager"
+MOD_MENU_FIELD_FORUMURL_DESC="You may enter here the url to another forum than the default ones."
+MOD_MENU_FIELD_FORUMURL_LABEL="Custom Support Forum"
 MOD_MENU_FIELD_SHOWHELP="Help Menu"
 MOD_MENU_FIELD_SHOWHELP_DESC="Show or hide the Help menu which includes links to various joomla.org sites useful to users."
 MOD_MENU_FIELD_SHOWNEW="Add New Shortcuts"
@@ -45,7 +47,12 @@ MOD_MENU_HELP_LINKS="Useful Joomla links"
 MOD_MENU_HELP_RESOURCES="Joomla Resources"
 MOD_MENU_HELP_SECURITY="Security Center"
 MOD_MENU_HELP_SHOP="Joomla Shop"
-MOD_MENU_HELP_SUPPORT_FORUM="Support Forum"
+MOD_MENU_HELP_SUPPORT_OFFICIAL_FORUM="Official Support Forum"
+; the string below will be used if the localized sample data contains an url for the desired community forum or if the 'Custom Support Forum' field parameter in the Admin Menu module contains an url
+MOD_MENU_HELP_SUPPORT_CUSTOM_FORUM="Custom Support Forum"
+; the string below will be used if MOD_MENU_HELP_SUPPORT_OFFICIAL_LANGUAGE_FORUM_VALUE has a value, i.e the # of the specific language forum in forum.joomla.org 
+MOD_MENU_HELP_SUPPORT_OFFICIAL_LANGUAGE_FORUM="Official [language] forum"
+MOD_MENU_HELP_SUPPORT_OFFICIAL_LANGUAGE_FORUM_VALUE=""
 MOD_MENU_HELP_TRANSLATIONS="Joomla Translations"
 MOD_MENU_HOME_DEFAULT="Home"
 MOD_MENU_HOME_MULTIPLE="Warning! Multiple homes!"
