@@ -59,6 +59,16 @@
 				</field>
 
 				<field
+					name="forum_url"
+					type="url"
+					class="inputbox"
+					size="30"
+					default=""
+					label="MOD_MENU_FIELD_FORUMURL_LABEL"
+					description="MOD_MENU_FIELD_FORUMURL_DESC"
+				/>
+
+				<field
 					name="cache"
 					type="list"
 					default="0"
